Fix spacing issues on homepage
TODO: The other pages (Menu, About)

--- a/src/style.css
+++ b/src/style.css
@@ -1,31 +1,44 @@
 body {
-    display:flex;
-    flex-direction: column;
+    height:100vh;
     margin:0px;
 }
 
 header {
     display:flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    align-items: center;
     width: 100vw;
+
+    border:4px solid red;
+}
+header nav {
+    gap:50px;
+}
+header button {
+    font-size: 36px;
 }
 
-.content {
+#content {
+    height:100%;
+    border:4px solid blue;
+}
+#home-page-container {
     display: flex;
-    height:auto;
-    flex:1;
+    height:100%;
 
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+    border:4px solid green;
 }
 
 #home-image {
-    max-width: 25vw;
+    max-width: 30vw;
+    width:auto;
 }
 
 #home-right-half {
     display:flex;
     flex-direction: column;
-
+    max-width: 50vw;
     align-items: center;
 }
